gccida/c1/notreg_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/cse.c:1264:26: error: must use 'enum' tag to refer to type 'rtx_code'
int  notreg_cost( rtx x, rtx_code outer) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/cse.c:1278:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v3] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/cse.c:1281:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v4] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/notreg_cost/src/obj/cse.o] Error 1
